v1.0.0/modules/schema/pages/class/LoadMotor.adoc
= `LoadMotor`
:toclevels: 4


+++Aggregate induction motor load. This model is used to represent a fraction of an ordinary load as "induction motor load".  It allows a load that is treated as an ordinary constant power in power flow analysis to be represented by an induction motor in dynamic simulation. This model is intended for representation of aggregations of many motors dispersed through a load represented at a high voltage bus but where there is no information on the characteristics of individual motors.
Either a "one-cage" or "two-cage" model of the induction machine can be modelled. Magnetic saturation is not modelled.
This model treats a fraction of the constant power part of a load as a motor. During initialisation, the initial power drawn by the motor is set equal to <i>Pfrac</i> times the constant <i>P</i> part of the static load.  The remainder of the load is left as a static load.
The reactive power demand of the motor is calculated during initialisation as a function of voltage at the load bus. This reactive power demand can be less than or greater than the constant <i>Q</i> component of the load.  If the motor's reactive demand is greater than the constant <i>Q</i> component of the load, the model inserts a shunt capacitor at the terminal of the motor to bring its reactive demand down to equal the constant <i>Q</i> reactive load.  
If an induction motor load model and a static load model are both present for a load, the motor <i>Pfrac</i> is assumed to be subtracted from the power flow constant <i>P</i> load before the static load model is applied.  The remainder of the load, if any, is then represented by the static load model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadMotor`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`LoadMotor`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LoadMotor {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}























LoadAggregate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}














LoadMotor -> LoadAggregate: LoadAggregate


LoadMotor -> DiagramObject: DiagramObjects


LoadMotor -> InstanceSet: InstanceSet


LoadMotor -> Name: Names


LoadMotor -> ChangeSetMember: PropertiesCIMDataObject


LoadMotor -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<LoadAggregate,`LoadAggregate`>>
| 1
| xref::class/LoadAggregate.adoc[`LoadAggregate`]
| +++Aggregate load to which this aggregate motor (dynamic) load belongs.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<d,`d`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Damping factor (<i>D</i>).  Unit = delta <i>P</i>/delta speed.  Typical value = 2.+++

| <<h,`h`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 0,4.+++

| <<lfac,`lfac`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Loading factor (<i>Lfac</i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++

| <<lp,`lp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Transient reactance (<i>Lp</i>).  Typical value = 0,15.+++

| <<lpp,`lpp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Subtransient reactance (<i>Lpp</i>).  Typical value = 0,15.+++

| <<ls,`ls`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Synchronous reactance (<i>Ls</i>).  Typical value = 3,2.+++

| <<pfrac,`pfrac`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of constant-power load to be represented by this motor model (<i>Pfrac</i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,3.+++

| <<ra,`ra`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stator resistance (<i>Ra</i>).  Typical value = 0.+++

| <<tbkr,`tbkr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Circuit breaker operating time (<i>Tbkr</i>) (&gt;= 0).  Typical value = 0,08.+++

| <<tpo,`tpo`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Transient rotor time constant (<i>Tpo</i>) (&gt;= 0).  Typical value = 1.+++

| <<tppo,`tppo`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Subtransient rotor time constant (<i>Tppo</i>) (&gt;= 0).  Typical value = 0,02.+++

| <<tv,`tv`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage trip pickup time (<i>Tv</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<vt,`vt`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage threshold for tripping (<i>Vt</i>).  Typical value = 0,7.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#d]
=== `d`
+++Damping factor (<i>D</i>).  Unit = delta <i>P</i>/delta speed.  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.d`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#h]
=== `h`
+++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 0,4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.h`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#lfac]
=== `lfac`
+++Loading factor (<i>Lfac</i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.lfac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#LoadAggregate]
=== `LoadAggregate`
+++Aggregate load to which this aggregate motor (dynamic) load belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.LoadAggregate`
| Cardinality
| 1
| Type
| xref::class/LoadAggregate.adoc[`LoadAggregate`]


|===

//[discrete]
[#lp]
=== `lp`
+++Transient reactance (<i>Lp</i>).  Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.lp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#lpp]
=== `lpp`
+++Subtransient reactance (<i>Lpp</i>).  Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.lpp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ls]
=== `ls`
+++Synchronous reactance (<i>Ls</i>).  Typical value = 3,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.ls`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pfrac]
=== `pfrac`
+++Fraction of constant-power load to be represented by this motor model (<i>Pfrac</i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.pfrac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ra]
=== `ra`
+++Stator resistance (<i>Ra</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.ra`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tbkr]
=== `tbkr`
+++Circuit breaker operating time (<i>Tbkr</i>) (&gt;= 0).  Typical value = 0,08.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tbkr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tpo]
=== `tpo`
+++Transient rotor time constant (<i>Tpo</i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tpo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tppo]
=== `tppo`
+++Subtransient rotor time constant (<i>Tppo</i>) (&gt;= 0).  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tppo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tv]
=== `tv`
+++Voltage trip pickup time (<i>Tv</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#vt]
=== `vt`
+++Voltage threshold for tripping (<i>Vt</i>).  Typical value = 0,7.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.vt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


