v1.1.0/modules/schema/pages/class/LoadMotor.adoc
= `LoadMotor`
:toclevels: 4


+++Aggregate induction motor load. This model is used to represent a fraction of an ordinary load as "induction motor load".  It allows a load that is treated as an ordinary constant power in power flow analysis to be represented by an induction motor in dynamic simulation. This model is intended for representation of aggregations of many motors dispersed through a load represented at a high voltage bus but where there is no information on the characteristics of individual motors.
Either a "one-cage" or "two-cage" model of the induction machine can be modelled. Magnetic saturation is not modelled.
This model treats a fraction of the constant power part of a load as a motor. During initialisation, the initial power drawn by the motor is set equal to <i>Pfrac</i> times the constant <i>P</i> part of the static load.  The remainder of the load is left as a static load.
The reactive power demand of the motor is calculated during initialisation as a function of voltage at the load bus. This reactive power demand can be less than or greater than the constant <i>Q</i> component of the load.  If the motor's reactive demand is greater than the constant <i>Q</i> component of the load, the model inserts a shunt capacitor at the terminal of the motor to bring its reactive demand down to equal the constant <i>Q</i> reactive load.  
If an induction motor load model and a static load model are both present for a load, the motor <i>Pfrac</i> is assumed to be subtracted from the power flow constant <i>P</i> load before the static load model is applied.  The remainder of the load, if any, is then represented by the static load model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadMotor`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`LoadMotor`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<LoadAggregate,`LoadAggregate`>>
//| [[slots_table.LoadAggregate]]<<LoadAggregate,`LoadAggregate`>>
| 1 +
xref::class/LoadAggregate.adoc[`LoadAggregate`]
| +++Aggregate load to which this aggregate motor (dynamic) load belongs.+++
| _n/a_

| <<d,`d`>>
//| [[slots_table.d]]<<d,`d`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Damping factor (<i>D</i>).  Unit = delta <i>P</i>/delta speed.  Typical value = 2.+++
| _n/a_

| <<h,`h`>>
//| [[slots_table.h]]<<h,`h`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 0,4.+++
| _n/a_

| <<lfac,`lfac`>>
//| [[slots_table.lfac]]<<lfac,`lfac`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Loading factor (<i>Lfac</i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++
| _n/a_

| <<lp,`lp`>>
//| [[slots_table.lp]]<<lp,`lp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Transient reactance (<i>Lp</i>).  Typical value = 0,15.+++
| _n/a_

| <<lpp,`lpp`>>
//| [[slots_table.lpp]]<<lpp,`lpp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Subtransient reactance (<i>Lpp</i>).  Typical value = 0,15.+++
| _n/a_

| <<ls,`ls`>>
//| [[slots_table.ls]]<<ls,`ls`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Synchronous reactance (<i>Ls</i>).  Typical value = 3,2.+++
| _n/a_

| <<pfrac,`pfrac`>>
//| [[slots_table.pfrac]]<<pfrac,`pfrac`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of constant-power load to be represented by this motor model (<i>Pfrac</i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,3.+++
| _n/a_

| <<ra,`ra`>>
//| [[slots_table.ra]]<<ra,`ra`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator resistance (<i>Ra</i>).  Typical value = 0.+++
| _n/a_

| <<tbkr,`tbkr`>>
//| [[slots_table.tbkr]]<<tbkr,`tbkr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Circuit breaker operating time (<i>Tbkr</i>) (&gt;= 0).  Typical value = 0,08.+++
| _n/a_

| <<tpo,`tpo`>>
//| [[slots_table.tpo]]<<tpo,`tpo`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Transient rotor time constant (<i>Tpo</i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<tppo,`tppo`>>
//| [[slots_table.tppo]]<<tppo,`tppo`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Subtransient rotor time constant (<i>Tppo</i>) (&gt;= 0).  Typical value = 0,02.+++
| _n/a_

| <<tv,`tv`>>
//| [[slots_table.tv]]<<tv,`tv`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage trip pickup time (<i>Tv</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<vt,`vt`>>
//| [[slots_table.vt]]<<vt,`vt`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage threshold for tripping (<i>Vt</i>).  Typical value = 0,7.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#d]
=== `d`
+++Damping factor (<i>D</i>).  Unit = delta <i>P</i>/delta speed.  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.d`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.d,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#h]
=== `h`
+++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 0,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.h`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.h,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#lfac]
=== `lfac`
+++Loading factor (<i>Lfac</i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.lfac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.lfac,&#10548;>>
--
////


//[discrete]
[#LoadAggregate]
=== `LoadAggregate`
+++Aggregate load to which this aggregate motor (dynamic) load belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.LoadAggregate`
| Cardinality
| 1
| Type
| xref::class/LoadAggregate.adoc[`LoadAggregate`]


|===

////
[.text-left]
--
<<slots_table.LoadAggregate,&#10548;>>
--
////


//[discrete]
[#lp]
=== `lp`
+++Transient reactance (<i>Lp</i>).  Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.lp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lp,&#10548;>>
--
////


//[discrete]
[#lpp]
=== `lpp`
+++Subtransient reactance (<i>Lpp</i>).  Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.lpp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lpp,&#10548;>>
--
////


//[discrete]
[#ls]
=== `ls`
+++Synchronous reactance (<i>Ls</i>).  Typical value = 3,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.ls`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ls,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pfrac]
=== `pfrac`
+++Fraction of constant-power load to be represented by this motor model (<i>Pfrac</i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.pfrac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.pfrac,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ra]
=== `ra`
+++Stator resistance (<i>Ra</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.ra`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ra,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tbkr]
=== `tbkr`
+++Circuit breaker operating time (<i>Tbkr</i>) (&gt;= 0).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tbkr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tbkr,&#10548;>>
--
////


//[discrete]
[#tpo]
=== `tpo`
+++Transient rotor time constant (<i>Tpo</i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tpo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpo,&#10548;>>
--
////


//[discrete]
[#tppo]
=== `tppo`
+++Subtransient rotor time constant (<i>Tppo</i>) (&gt;= 0).  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tppo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tppo,&#10548;>>
--
////


//[discrete]
[#tv]
=== `tv`
+++Voltage trip pickup time (<i>Tv</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.tv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tv,&#10548;>>
--
////


//[discrete]
[#vt]
=== `vt`
+++Voltage threshold for tripping (<i>Vt</i>).  Typical value = 0,7.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadMotor.vt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vt,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/LoadAggregate.adoc[`LoadAggregate`] | xref::class/LoadAggregate.adoc#LoadMotor[`LoadMotor`]


|===

